--- a/split_half_model_fit_analysis_v4.Rmd
+++ b/split_half_model_fit_analysis_v4.Rmd
@@ -946,19 +946,19 @@ RL.BIC.S6 <-  fit.models.setsize(model = 'RL', setsize = 6, 2)
 
 ##########---------LTM FITS ----------------############
 
-LTM.BIC.S3 <-  fit.models.setsize(model = 'LTM', setsize = 3, 2)
-LTM.BIC.S6 <-  fit.models.setsize(model = 'LTM', setsize = 6, 2)
+LTM.BIC.S3 <-  fit.models.setsize(model = 'LTM', setsize = 3, 3)
+LTM.BIC.S6 <-  fit.models.setsize(model = 'LTM', setsize = 6, 3)
 
 
 ##########---------RL-LTMstr FITS ----------------############
 
-STR.BIC.S3 <-  fit.models.setsize(model = 'STR', setsize = 3, 2)
-STR.BIC.S6 <-  fit.models.setsize(model = 'STR', setsize = 6, 2)
+STR.BIC.S3 <-  fit.models.setsize(model = 'STR', setsize = 3, 6)
+STR.BIC.S6 <-  fit.models.setsize(model = 'STR', setsize = 6, 6)
 
 
 ##########---------RL-LTMmeta FITS ----------------############
-META.BIC.S3 <-  fit.models.setsize(model = 'META', setsize = 3, 2)
-META.BIC.S6 <-  fit.models.setsize(model = 'META', setsize = 6, 2)
+META.BIC.S3 <-  fit.models.setsize(model = 'META', setsize = 3, 5)
+META.BIC.S6 <-  fit.models.setsize(model = 'META', setsize = 6, 5)
 
 
 
@@ -1063,6 +1063,22 @@ count(), by='N3') %>%
   mutate(percent = (counts/n)*100)
 
 best.fit.counts.ss %>% 
+  mutate(same = N6==N3) %>% 
+  group_by(same) %>% 
+  summarize(cc=sum(counts))
+
+best.fit.counts.ss %>% 
+  mutate(same = N6==N3) %>% 
+  group_by(same, N3) %>% 
+  summarize(cc=sum(counts))
+
+best.fit.counts.ss %>% 
+  mutate(same = N6==N3) %>% 
+  group_by(same, N6) %>% 
+  summarize(cc=sum(counts))
+
+
+best.fit.counts.ss %>% 
 
   ggplot(aes(x=N3, y=N6, fill=percent, label=round(percent,2))) +
   geom_tile() +
@@ -1078,15 +1094,11 @@ best.fit.counts.ss %>%
   theme_pubclean(base_size = 18) 
   
 
-
-
-
 ```
 
 ### Fit counts
- Firstly, 56% of participants who fit LTM for set-size 3 also fit LTM for set-size 3, the remaining minority fit the Biased model. For those who fit the Biased model best for set-size 3, nearly 60% of them also fit the Biased model for set-size 6. The remainder fit the LTM model. For the 8 participants who fit the RL model for set-size 3, all but one fit the LTM model best for the set-size 6 condition. This pattern is slightly different from what we have seen before -  LTM is not the clear winner as before, as close to 20% of participants fit the Biased model for both set-sizes. Additionally, there seems to be a close to 40-60% split in between the two set-sizes. This suggests that changing task conditions influence strategy choice. ***** How does this compare to what we have learned before?****
+
  
-## Do changes in strategy between set-sizes result in better performance? 
 
 
 ```{r PART II: join behavioral and model data}
@@ -1094,50 +1106,50 @@ best.fit.counts.ss %>%
 
 all_sims.ss =list(list(RL.sim, LTM.sim, STR.sim, META.sim), #, STR.sim, META.sim remvoed the two combined models
      list("RL", "LTM",  "STR", "META")) %>%  #, Removed the two combined models
-  pmap(get_data) %>%  
-  reduce(bind_rows) %>% 
-  mutate(iteration = str_remove_all(iteration, "[:alpha:]") %>%  
-           as.numeric(), 
+  pmap(get_data) %>%
+  reduce(bind_rows) %>%
+  mutate(iteration = str_remove_all(iteration, "[:alpha:]") %>%
+           as.numeric(),
          type ='model' )
 
-  
+
 # separate out parameters and set them into their own long form column
-all_sims.ss %<>% 
-  unite(col = 'mod.id', c('data_source','model_index'), sep = '_', remove = F ) 
+all_sims.ss %<>%
+  unite(col = 'mod.id', c('data_source','model_index'), sep = '_', remove = F )
 # join all sims with index for best fitting model - index search
 
 index_search.ss = inner_join(
   best.fits.ss
   ,best.fit.idx.ss
   ,by = c('subjects', 'setsize')
-) 
+)
 
 # This subset contains the best fit model data for all participants conditions
-#all.p.model.dat = 
+#all.p.model.dat =
 #trial 1-column multi index
 index_search.ss %<>%
   mutate(condition = case_when(str_detect(setsize,'N3') ~ 'set3_learn',
                                TRUE ~ 'set6_learn' )
-         ) %>% 
+         ) %>%
   rbind(index_search.ss %>%
           mutate(condition = case_when(str_detect(setsize,'N3') ~ 'set3_test',
                                TRUE ~ 'set6_test' )
                  )
-        ) %>% 
-  unite(col = 'mod.id', c('model','index'), sep = '_', remove = F ) 
+        ) %>%
+  unite(col = 'mod.id', c('model','index'), sep = '_', remove = F )
 
 
 
- p.model.dat.ss <- 
-   all_sims.ss %>% 
- inner_join(index_search.ss,  
+ p.model.dat.ss <-
+   all_sims.ss %>%
+ inner_join(index_search.ss,
     by = c('condition','mod.id')
-    ) 
-  
- 
+    )
+
+
 
 ######### use subject.dat from above
-  
+
 # last bit -  add model identity must join by half subject and condition
   mod.id.temp.ss <-
      all_sims.ss %>%
@@ -1145,24 +1157,54 @@ index_search.ss %<>%
     by = c('condition','mod.id')
     ) %>%
      select(c(subjects, condition, model))
-  
-  melted.p.behav.model.ss <- 
+
+  melted.p.behav.model.ss <-
   rbind(subject.dat.full,
-        p.model.dat.ss %>% 
+        p.model.dat.ss %>%
           select(-c(index, data_source,
-                    model_index, mod.id, 
-                    model, setsize))) %>% 
+                    model_index, mod.id,
+                    model, setsize))) %>%
   inner_join(mod.id.temp.ss,
  by=c('subjects', 'condition')
- ) %>% 
-    separate(col = condition, 
+ ) %>%
+    separate(col = condition,
              into = c('condition', 'phase'),
              remove = T )
 
 ```
 
+
+```{r comparison of the bias parameter}
+bias_analysis <- 
+best.fits.ss %>% 
+  inner_join(best.fit.idx.ss,
+             by=c('setsize', 'subjects')) %>% 
+  filter(model=='STR') %>% 
+  inner_join(STR.sim %>% 
+               select(index, bias), 
+             by = 'index') %>% 
+  inner_join( best.fits.ss %>% 
+                filter(model=='STR') %>% 
+                pivot_wider(id_cols = c(subjects), names_from = setsize, values_from = model) %>%
+                mutate(same = !is.na(N3==N6)) %>% 
+                select(subjects, same), 
+              by = 'subjects')
+
+
+bias_analysis %>% 
+  #filter(same==F) %>% 
+  group_by(same, setsize ) %>% 
+  summarise(m.bias = mean(bias), 
+            n=n(), 
+            se = sd(bias)/sqrt(n))
+  
+  
+
+```
+
 ```{r plot model and behavioral data}
-plot.temp <- melted.p.behav.model.ss %>% 
+plot.temp <- 
+  melted.p.behav.model.ss %>% 
   unique() %>% 
   select(-accuracy) %>% 
 pivot_wider(id_cols = c(subjects,phase, type, iteration), names_from = condition, values_from = model) %>% 
@@ -1186,24 +1228,24 @@ temp.condition.acc <-
   filter(iteration==12, type=='behavioral') %>% 
   select(-iteration, -type) %>% 
    pivot_wider(id_cols = c(subjects, phase), names_from = condition, values_from = accuracy) %>% 
-   mutate(acc.diff= set3-set6) %>% 
+   mutate(acc.mean= (set3+set6)/2) %>% 
   select(-set3, -set6)
  
  
-diff.data <- 
+mean.data <- 
   inner_join(temp.model.identity, temp.condition.acc, by=c('subjects', 'phase')) %>% 
   mutate(stable=set3==set6)
 
 
-diff.data %>% 
+mean.data %>% 
   group_by(stable, phase) %>% 
-  summarise(mean.diff.accuracy = mean(acc.diff), 
+  summarise(mean.accuracy = mean(acc.mean), 
             n=n(), 
-            se = sd(acc.diff)/sqrt(n)
+            se = sd(acc.mean)/sqrt(n)
             ) %>% 
-  ggplot(aes(x=stable, y=mean.diff.accuracy,
-             ymax=mean.diff.accuracy+se, 
-             ymin =mean.diff.accuracy-se, 
+  ggplot(aes(x=stable, y=mean.accuracy,
+             ymax=mean.accuracy+se, 
+             ymin =mean.accuracy-se, 
              group=stable, fill=stable)
          ) +
   geom_bar(stat = 'identity', position = position_dodge()) +
@@ -1211,21 +1253,10 @@ diff.data %>%
   theme_pubclean(base_size = 18) +
   facet_wrap(vars(phase))
 
-diff.data %>% 
-  group_by(stable, phase, set3, set6) %>% 
-summarise(mean.diff.accuracy = mean(acc.diff), 
-            n=n(), 
-            se = sd(acc.diff)/sqrt(n)) %>% 
-  ggplot(aes(x=set3, y=mean.diff.accuracy,
-             ymax=mean.diff.accuracy+se, 
-             ymin =mean.diff.accuracy-se, 
-             group=stable, fill=stable)
-         ) +
-  geom_bar(stat = 'identity', position = position_dodge()) +
-  geom_errorbar( stat='identity', position = position_dodge())+
-  theme_pubclean(base_size = 18)+
-  facet_wrap(vars(phase)) +
-  ggtitle('Split up by set3 models')
+
+mean.data %>% 
+  lm(acc.mean ~ phase* stable, data=.) %>% 
+  anova()
 
 
 
